[fix] mobile visibility of cards

--- a/styles.css
+++ b/styles.css
@@ -221,13 +221,14 @@ hr {
     margin-bottom: 1.5rem;
 
     @media only screen and (max-width:576px){
-        > :first-child {
+        /* > :first-child {
             margin-left: 2rem !important;
         }
 
         > :last-child {
             margin-right: 2rem !important;
-        }
+        } */
+
         margin-bottom: 0 !important;
         width: 100%;
     }
@@ -243,9 +244,9 @@ hr {
         height: 300px;
         overflow: hidden;
 
-        @media only screen and (max-width:576px){
+        /* @media only screen and (max-width:576px){
             margin: 0 0.5rem;
-        }
+        } */
     
         p {
             color: white !important;
@@ -282,13 +283,14 @@ hr {
             }
     
             &::after {
-                content:'';
-                position:absolute;
-                left:0; top:0;
-                width:100%; height:100%;
                 display:inline-block;
+                position:absolute; 
+                top:0;
+                left:0;
                 background: linear-gradient(to bottom, transparent 0%, black 120%);
-                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+                width:100%; 
+                height:100%;
+                content:'';
               }
         }
     
@@ -508,5 +510,11 @@ hr {
 
     @media only screen and (max-width: 576px) {
         width: 100%;
+    }
+
+    &.type-a {
+        @media only screen and (max-width: 992px) {
+            width: 100%;
+        }
     }
 }
